--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -1,2 +1,38 @@
-<h1>Works#show</h1>
-<p>Find me in app/views/works/show.html.erb</p>
+
+<main>
+  <section>
+    <h2> <%= @work.title %> </h2>
+    <p>Created by: <%= @work.creator %> </p>
+    <p>Published: <%= @work.publication_year %> </p>
+    <p> <%= @work.description %> </p>
+    <section>
+      <a class="btn btn-primary" href="/">Back to media ranks</a>
+      <a class="btn btn-primary" href="/works/583/edit">Edit</a>
+      <a class="btn btn-primary" rel="nofollow" data-method="post" href="/works/583/upvote">Upvote</a>
+      <a class="btn btn-danger" data-confirm="Are you sure?" rel="nofollow" data-method="delete" href="/works/583">Delete</a>
+    </section>
+  </section>
+
+  <h1>YET TO DO: below</h1>
+  <section class="works-votes__container">
+    <h3 class="works-votes__header">3 Votes for this Album</h3>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>User</th>
+          <th>Date</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><a href="/users/670">lisa</a></td>
+          <td>May 15, 2020</td>
+        </tr>
+        <tr>
+          <td><a href="/users/657">Mr Z</a></td>
+          <td>May 14, 2020</td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
+</main>
