add works#new works#create action and view

--- a/app/views/works/new.html.erb
+++ b/app/views/works/new.html.erb
@@ -1,2 +1,7 @@
-<h1>Works#new</h1>
-<p>Find me in app/views/works/new.html.erb</p>
+<main>
+
+  <h2>Add a new work</h2>
+  
+  <%= render partial: "form", locals: { action_name: "Create" } %>
+
+</main>
