add flash and display flash messages in layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,9 +41,17 @@
         </li>
       </ul>
     </nav>
-    
   </header>
 
+    <section class="alert__container">
+      <% flash.each do |name, message| %>
+        <div class="alert alert-<%= name %>">
+        <span>  <%= message %> </span>
+        </div>
+      <% end %>
+    </section>
+
     <%= yield %>
+
   </body>
 </html>
