--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -6,10 +6,10 @@
     <p>Published: <%= @work.publication_year %> </p>
     <p> <%= @work.description %> </p>
     <section>
-      <a class="btn btn-primary" href="/">Back to media ranks</a>
-      <a class="btn btn-primary" href="/works/583/edit">Edit</a>
-      <a class="btn btn-primary" rel="nofollow" data-method="post" href="/works/583/upvote">Upvote</a>
-      <a class="btn btn-danger" data-confirm="Are you sure?" rel="nofollow" data-method="delete" href="/works/583">Delete</a>
+      <%= link_to 'Back to media ranks', root_path, class: "btn btn-primary" %>
+      <%= link_to 'Edit', edit_work_path(@work.id), class: "btn btn-primary" %>
+      <a class="btn btn-primary" rel="nofollow" data-method="post" href="/works/583/upvote">Upvote YET!</a>
+      <%= link_to 'Delete', work_path(@work.id), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger" %>
     </section>
   </section>
 
