--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,36 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<main>
+    
+  <h2>User Summary: <%= link_to @user.username, user_path(@user.id) %> </h2>
+  <p>Joined site  <%= @user.created_at %> </p>
+
+  <section class="user-votes__container">
+    <h3 class="user-votes__header">Votes</h3>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Media Title</th>
+          <th>Created By</th>
+          <th>Published</th>
+          <th>Category</th>
+          <th>Voted On</th>
+        </tr>
+      </thead>
+      <tbody>
+          <% @user.votes.all.each do |vote|%>
+          <% work = Work.find_by(id: vote.work_id) %>
+          <tr>
+            <td> <%= link_to work.title, work_path(work.id) %> </td>
+            <td> <%= work.creator %> </td>
+            <td> <%= work.publication_year %> </td>
+            <td> <%= work.category %> </td>
+            <td> <%= vote.created_at %> </td>
+          </tr>
+          <% end %>
+      </tbody>
+    </table>
+  </section>
+
+  <%= link_to 'See All Users', users_path, class: "btn btn-secondary" %>
+  <%= link_to 'Back to Media List', root_path, class: "btn btn-primary" %>
+
+</main>
