--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,8 +14,8 @@
         <% @users.each do |user| %>
         <tr>
           <td> <%= link_to user.username, user_path(user.id) %> </td>
-          <td> <%= user.votes %> </td>
-          <td> <%= user.created_at%> </td>
+          <td> <%= user.votes.count %> </td>
+          <td> <%= user.created_at.strftime("%b %d, %Y") %> </td>
         </tr>
         <% end %>
     </tbody>
