--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,111 @@
 
 @import "**/*";
 
+body, h1, h2, h3, h4, h5 {
+  font-family: "Gudea", sans-serif;
+}
+
 main {
   padding: 2rem;
+}
+
+h1, h2, h3, h4 {
+  font-weight: bold;
+}
+
+a, h2, h3 {
+  color: #26A69A;
+}
+
+ul {
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+}
+
+li {
+  display: list-item;
+  text-align: -webkit-match-parent;
+}
+
+.btn-primary {
+  background-color: #26A69A;
+  color: white;
+  border-color: #26A69A;
+}
+
+.nav {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+
+.app-header__header {
+  max-width: 100%;
+  background-color: #B2DFDB;
+  margin-bottom: 0.5rem;
+  padding: 2rem 1rem 0.5rem 1rem;
+}
+
+.app-header__header h1 {
+  text-align: center;
+  margin: 25px auto 40px auto;
+}
+
+.app-header__header h1 a {
+  color: #FF5722;
+  padding-right: 25px;
+  margin-right: 15px;
+  border-right: white 2px solid;
+}
+
+.app-header__header h1 small {
+  color: white;
+}
+
+.app-header__nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.app-header__user-nav-container .nav-item {
+  margin-left: 2rem;
+}
+
+.app-header__nav_item {
+    margin-top: 1rem;
+}
+
+.app-header__nav_item .nav-link {
+  color: #00796B;
+}
+
+.nav-link {
+  display: block;
+  padding: 0.5rem 1rem;
+}
+
+.spotlight__header {
+  color: #26A69A;
+}
+
+.spotlight {
+  padding: 0 2rem 2rem 2rem;
+}
+
+.spotlight__header--prefix {
+  color: #424242;
+}
+
+.spotlight__header--prefix::after {
+  content: ":";
+}
+
+.spotlight__link-to {
+  border-bottom: 2px solid;
 }
