--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -3,7 +3,8 @@
     <% spotlight = Work.max_votes %>
     <h2 class="spotlight__header">
       <span class="spotlight__header--prefix">Media Spotlight</span>
-      <%= link_to spotlight.title, work_path(spotlight.id) %> by <%= spotlight.creator %>
+      <%= link_to spotlight.title, work_path(spotlight.id), class: "spotlight__link-to" %> 
+      by <%= spotlight.creator %>
     </h2>
     <p class="spotlight__description">
       <%= spotlight.votes.count %> votes - <%= spotlight.description %>
