revise works#show view to parse timestamp and take out extra btn

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,7 +43,7 @@ ul {
 
 li {
   display: list-item;
-  text-align: -webkit-match-parent;
+  // text-align: -webkit-match-parent;
 }
 
 .btn-primary {
