--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
+    <%= favicon_link_tag asset_path('Martin-Berube-Flat-Animal-Dolphin.ico') %>
     <link href="https://fonts.googleapis.com/css2?family=Gudea:wght@400;700&display=swap" rel="stylesheet">
   </head>
 
@@ -63,4 +64,5 @@
     <%= yield %>
 
   </body>
+  <footer>ADA MEDIA RANKER • COJENCO © 2020</footer>
 </html>
