--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,5 +64,5 @@
     <%= yield %>
 
   </body>
-  <footer>ADA MEDIA RANKER • COJENCO © 2020</footer>
+  <footer>|| ADA MEDIA RANKER • COJENCO © 2020 ||</footer>
 </html>
