add works#category_sort custom method to works model

--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -14,7 +14,7 @@
         </tr>
       </thead>
       <tbody>
-      <% Work.where(category: :album).find_each do |work| %>
+      <% Work.category_sort(:album).each do |work| %>
           <tr>
             <td> <%= work.votes.count%> </td>
             <td> <%= link_to work.title, work_path(work.id) %> </td>
@@ -40,7 +40,7 @@
         </tr>
       </thead>
       <tbody>
-      <% Work.where(category: :book).find_each do |work| %>
+      <% Work.category_sort(:book).each do |work| %>
           <tr>
             <td> <%= work.votes.count%> </td>
             <td> <%= link_to work.title, work_path(work.id) %> </td>
@@ -66,7 +66,7 @@
         </tr>
       </thead>
       <tbody>
-      <% Work.where(category: :movie).find_each do |work| %>
+      <% Work.category_sort(:movie).each do |work| %>
           <tr>
             <td> <%= work.votes.count%> </td>
             <td> <%= link_to work.title, work_path(work.id) %> </td>
