add validation error message display to login_form view

--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -1,3 +1,16 @@
+<%if @user.errors.any?%>
+<section class="alert__container">
+  <div class="alert alert-warning">
+    <span>A problem occurred: Could not log in</span>
+      <ul>
+          <%@user.errors.each do |column, message|%>
+            <li> <%=column%>: <%=message%> </li>
+          <%end%>
+      </ul>
+  </div>
+</section>
+<%end%>
+
 <main>
   <h2>Log In</h2>
   
