revise footer and apply sea theme

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,5 +66,5 @@
     <%= yield %>
 
   </body>
-  <footer>|| ADA MEDIA RANKER • COJENCO © 2020 ||</footer>
+  <footer>|| ADA MEDIA RANKER &#128051; COJENCO © 2020 ||</footer>
 </html>
